--- a/Tag.html
+++ b/Tag.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>HTML Tag 연습</title>
-        <base href="http://ojunso.github.io/Web/" />
+        <base href="https://ojunso.github.io/Web/" />
     </head>
     <body>
         <h1>HTML TAG</h1>
