--- a/Tag.html
+++ b/Tag.html
@@ -9,11 +9,11 @@
         <h1>HTML TAG</h1>
         <hr />
         <h2>1. HTML 개요</h2>
-        <p><a href="index.html" target="_blank" title="move w3c.org">HTML</a>은 하이퍼텍스트 마크업 언어(HyperText Markup Language)
+        <p><a href="index.html" target="_blank" title="hello, World">HTML</a>은 하이퍼텍스트 마크업 언어(HyperText Markup Language)
             라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.</p>
         <p><a href="htmlTest.html" target="_blank" title="html structure">HTML</a>은 하이퍼텍스트 마크업 언어(HyperText Markup Language)<br/>
                 라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.</p>
-        <p>&lt;HTML&gt;HTML은 하이퍼텍스트 마크업 언어(HyperText Markup Language)&nbsp;&nbsp;
+        <p><a href="#down" target="_blank" title="pre tag">&lt;HTML&gt;</a>HTML은 하이퍼텍스트 마크업 언어(HyperText Markup Language)&nbsp;&nbsp;
             라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.</p>
 
         <p><b>굵은 글씨</b><br /><strong>굵은 중요한 글씨</strong></p>
@@ -22,7 +22,7 @@
         <p><ins>밑줄 글씨</ins><br /><del>삭제된 글씨</del></p>
         <p><sup>위 첨자</sup><br /><sub>아래 첨자</sub></p>
         <blockquote>인용문</blockquote>
-        <pre>HTML은 하이퍼텍스트 마크업 언어(HyperText Markup Language)
+        <pre id="down">HTML은 하이퍼텍스트 마크업 언어(HyperText Markup Language)
             라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.
         </pre>
 
