--- a/Tag.html
+++ b/Tag.html
@@ -15,7 +15,9 @@
                 라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.</p>
         <p><a href="#down" target="_blank" title="pre tag">&lt;HTML&gt;</a>HTML은 하이퍼텍스트 마크업 언어(HyperText Markup Language)&nbsp;&nbsp;
             라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.</p>
-
+        <hr />
+        <img src="macaroons.jpg" width="50%" />
+        <hr />
         <p><b>굵은 글씨</b><br /><strong>굵은 중요한 글씨</strong></p>
         <p><i>기울어진 글씨</i><br /><em>기울어진 중요한 글씨</em></p>
         <p><small>조금 작은 글씨</small><br /><mark>하이라이트</mark></p>
