--- a/Tag.html
+++ b/Tag.html
@@ -6,6 +6,16 @@
         <base href="https://ojunso.github.io/Web/" />
     </head>
     <body>
+        <ol>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+        </ol>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+        </ul>
         <h1>HTML TAG</h1>
         <hr />
         <h2>1. HTML 개요</h2>
