--- a/Tag.html
+++ b/Tag.html
@@ -27,7 +27,7 @@
             라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.</p>
         <hr />
         <img src="macaroons.jpg" width="10%" alt="https://placeholder.it/350x150" />
-        <img src="nothing.jpg" width="10%" onerror = "src= 'https://via.placeholder.com/350x150'" />
+        <img src="nothing.jpg" onerror = "src= 'https://via.placeholder.com/350x150'" />
         <img src="html5.jpg" width="50%" />
         <hr />
         <p><b>굵은 글씨</b><br /><strong>굵은 중요한 글씨</strong></p>
